<resources>
    <string name="app_name">MoneySaver</string>
    <string name="add_payment">Add Payment</string>
    <string name="get_salary">Add to wallet</string>
    <string name="show_history">Show Payment History</string>
    <string name="Graphs">Show Graphs</string>
    <string name="you_have">You have:</string>
    <string name="salary_amount_hint">Enter amount</string>
    <string name="add">Add</string>
    <string name="enter_name">Name of payment</string>
    <string name="enter_type">Type of payment</string>
    <string name="enter_category">Category of payment</string>
</resources>
