<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/editText"
        android:layout_width="306dp"
        android:layout_height="65dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:text="@string/you_have"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/showHistoryButton"
        android:layout_width="339dp"
        android:layout_height="76dp"
        android:onClick="openShowHistory"
        android:text="@string/show_history"
        app:layout_constraintBottom_toTopOf="@+id/addToWalletButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.874" />

    <Button
        android:id="@+id/addToWalletButton"
        android:layout_width="339dp"
        android:layout_height="76dp"
        android:onClick="openAddSalary"
        android:text="@string/get_salary"
        app:layout_constraintBottom_toTopOf="@+id/showGraphsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.903" />

    <Button
        android:id="@+id/showGraphsButton"
        android:layout_width="339dp"
        android:layout_height="76dp"
        android:onClick="openShowGraphs"
        android:text="@string/Graphs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.885" />

    <Button
        android:id="@+id/addPaymentButton"
        android:layout_width="339dp"
        android:layout_height="76dp"
        android:onClick="openAddPayment"
        android:text="@string/add_payment"
        app:layout_constraintBottom_toTopOf="@+id/showHistoryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.818" />

    <TextView
        android:id="@+id/moneyAmountText"
        android:layout_width="315dp"
        android:layout_height="57dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/addPaymentButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

</androidx.constraintlayout.widget.ConstraintLayout>