<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPaymentActivity">

    <EditText
        android:id="@+id/nameText"
        android:layout_width="295dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/priceText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/priceText"
        android:layout_width="295dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/salary_amount_hint"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/typeSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameText" />

    <Button
        android:id="@+id/add_payment_button"
        android:layout_width="226dp"
        android:layout_height="56dp"
        android:layout_marginBottom="92dp"
        android:background="@android:color/holo_blue_dark"
        android:onClick="AddPayment"
        android:text="@string/add"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/typeSpinner"
        android:layout_width="295dp"
        android:layout_height="50dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/categorySpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceText" />

    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="295dp"
        android:layout_height="50dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/add_payment_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeSpinner" />
</androidx.constraintlayout.widget.ConstraintLayout>